# rover_nav_plan

rover_config/: CMakeLists.txt
rover_config/config/: mapper_params_online_sync.yaml  tb3_params.yaml
rover_config/maps/: base_map.pgm  base_map.yaml  map.yaml  mars.pgm  mars.yaml  obstacle_map.pgm  obstacle_map.pgm~  obstacle_map.yaml  tb_test_map.pgm  tb_test_map.yaml
rover_config/models/turtlebot3_world/: model.sdf
rover_config/rviz/: marta.rviz  nav2_default_view.rviz
rover_config/urdf/: bb2.gazebo  bb2.xacro  marta.gazebo  marta.xacro  stim300.xacro  vlp_16.gazebo  vlp_16.xacro
rover_config/worlds/: base.world  mars.world  mars2.world  mars3.world  mars_walls.world  tb3_world.model
rover_gazebo_plugins/: CMakeLists.txt
rover_msgs/srv/: ChangeLocomotionMode.srv
rover_nav/: CMakeLists.txt  package.xml
rover_nav/behaviour_trees/: navigate.xml
rover_nav/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  rover_sim.launch.py  slam_launch.py
rover_nav/params/: navigation_params.yaml
rover_planning/: CMakeLists.txt  package.xml
rover_planning/behavior_trees_xml/: calibration.xml  move.xml  photo.xml  recharge.xml  record.xml
rover_planning/config/: params.yaml  params_mars.yaml
rover_planning/include/rover_planning/: save_photo_client.hpp
rover_planning/include/rover_planning/behavior_tree_nodes/: Calibration.hpp  Move.hpp  Photo.hpp  Recharge.hpp  Record.hpp
rover_planning/launch/: marta_planning_launch.py
rover_planning/pddl/: problem.pddl  rover_domain.pddl  rover_problem
rover_planning/src/behavior_tree_nodes/: Calibration.cpp  Move.cpp  Photo.cpp  Recharge.cpp  Record.cpp
rover_teleop/: package.xml  setup.py
rover_teleop/rover_teleop/script/: teleop_keyboard.py
