<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_nav</name>
  <version>0.0.0</version>
  <description>Launch files for a rover</description>
  <maintainer email="dpuertonunez@gmail.com">Daniel Puerto</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>launch_helpers</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rover_config</exec_depend>
  <exec_depend>rover_gazebo_plugins</exec_depend>
  <exec_depend>rover_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>

  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
