<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_teleop</name>
  <version>2.1.0</version>
  <description>
    Teleoperation node using keyboard for MaRTA rover.
  </description>
  <author email="dpuertonunez@gmail.com">Daniel Puerto Núñez</author>
  <maintainer email="dpuertonunez@gmail.com">Daniel Puerto Núñez</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
